--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -16,36 +16,29 @@
     width: 100%;
     margin-top: $margin;
     box-sizing: border-box;
-    padding: $padding;
+    padding: 0 $padding;
 
     h2 {
-      margin: 0;
-      margin-bottom: $margin;
-    }
-
-    span {
-      display: block;
+      margin: $margin 0;
     }
   }
 
   // Page transitions
   .fade-enter {
-    transition: opacity $transitionSpeed ease;
+    transition: $transitionSpeed;
     opacity: 0;
   }
 
   .fade-enter.fade-enter-active {
     opacity: 1;
-    z-index: 1;
   }
 
   .fade-exit {
-    transition: opacity $transitionSpeed ease;
+    transition: $transitionSpeed;
     opacity: 1;
   }
 
   .fade-exit.fade-exit-active {
     opacity: 0;
-    z-index: 0;
   }
 }
