--- a/src/scss/Controls.scss
+++ b/src/scss/Controls.scss
@@ -2,9 +2,17 @@
 
 .Controls {
   margin: $margin 0;
+  padding: $margin 0;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+
+  p {
+    margin: 0;
+  }
 
   button {
-    margin-right: $margin / 2;
+    margin-left: $margin / 2;
     font-size: 0.75em;
+    outline: none;
   }
 }
