--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -16,6 +16,9 @@
     box-sizing: border-box;
     padding: 0 $padding;
     margin-top: $margin;
+    border-radius: 5px;
+    box-shadow: 0px 5px 10px 10px rgba(0, 0, 0, 0.01);
+    transition: all $transitionSpeed ease;
 
     h2 {
       margin: $margin 0;
@@ -28,6 +31,7 @@
 
     > div {
       margin-top: 0;
+      border-radius: 0;
     }
   }
 
@@ -35,7 +39,7 @@
   > div.fade-enter {
     transition: transform $transitionSpeed, opacity $transitionSpeed;
     transition-timing-function: ease-out;
-    opacity: 0.5;
+    opacity: 0.75;
     transform: translateX(-50%) scale(0.975);
   }
 
