--- a/src/scss/Controls.scss
+++ b/src/scss/Controls.scss
@@ -3,14 +3,16 @@
 .Controls {
   margin: $margin 0;
   border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
 
-  p {
-    line-height: 0.9em;
+  pre {
+    padding: $padding;
+    background-color: #f6f8fa;
+    border-radius: 5px;
   }
 
   button {
     margin-left: $margin / 2;
+    padding: $padding / 4;
     font-size: 0.75em;
     outline: none;
   }
