--- a/src/scss/Controls.scss
+++ b/src/scss/Controls.scss
@@ -12,9 +12,9 @@
   }
 
   button {
-    margin-left: $margin / 2;
+    margin-right: $margin / 2;
     padding: $padding / 4;
-    font-size: 0.75em;
+    font-size: 0.8em;
     outline: none;
   }
 }
